tests/ui/associated-consts/defaults-not-assumed-fail.stderr
error[E0080]: evaluation of `<() as Tr>::B` failed
  --> $DIR/defaults-not-assumed-fail.rs:8:19
   |
LL |     const B: u8 = Self::A + 1;
   |                   ^^^^^^^^^^^ attempt to compute `u8::MAX + 1_u8`, which would overflow

note: erroneous constant used
  --> $DIR/defaults-not-assumed-fail.rs:33:16
   |
LL |     assert_eq!(<() as Tr>::B, 0);    // causes the error above
   |                ^^^^^^^^^^^^^

note: erroneous constant used
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `assert_eq!`
   |
  ::: $DIR/defaults-not-assumed-fail.rs:33:5
   |
LL |     assert_eq!(<() as Tr>::B, 0);    // causes the error above
   |     ---------------------------- in this macro invocation

note: erroneous constant used
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `assert_eq!`
   |
  ::: $DIR/defaults-not-assumed-fail.rs:33:5
   |
LL |     assert_eq!(<() as Tr>::B, 0);    // causes the error above
   |     ---------------------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
